Add financial entitie
