# src/app.ts
@@ -1,7 +1,8 @@
 import express from 'express';
 import { createProductRouter } from './infrastructure/http/routes/product.routes';
 import { createHealthRouter } from './infrastructure/http/routes/health.routes';
-import { productController, healthController } from './infrastructure/dependencies';
+import { createFinancialEntityRoutes } from './infrastructure/http/routes/financialEntity.routes';
+import { productController, healthController, financialEntityController } from './infrastructure/dependencies';
 import { requestLogger } from './infrastructure/http/middlewares/requestLogger';
 
 export const app = express();
@@ -10,3 +11,4 @@ app.use(requestLogger);
 
 app.use('/health', createHealthRouter(healthController));
 app.use('/products', createProductRouter(productController));
+app.use('/financial-entities', createFinancialEntityRoutes(financialEntityController));
