# src/domain/entities/IFinancialEntity.ts
@@ -1,0 +1,9 @@
+export interface IFinancialEntity {
+  id: string;
+  name: string;
+  balance?: number | null;
+  clientId: string;
+  createdAt?: Date;
+  updatedAt?: Date;
+  valueHistory?: { date: Date; value: number }[];
+}
